My contribution with stylesheet included

--- a/hospitalrun.css
+++ b/hospitalrun.css
@@ -1,5 +1,5 @@
 body{
     background-image: url(logo.png);
     background-repeat: no-repeat;
-    background-size: 50%/90%;
+    background-position: center;
 }
