--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,19 @@
 html {
   scroll-behavior: smooth;
 }
+*{
+  font-family: 'Spartan';
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Spartan';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:  'Spartan';
 }
 
 .feather {
@@ -50,7 +50,7 @@ code {
 
 .nav-header{
   /* font-family: Sans-serif; */
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Spartan';
   font-size: xx-large;
 }
 
