--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ code {
 }
 
 .navbar .form-control {
-  padding: .75rem 1rem;
+  /* padding: .75rem 1rem; */
   border-width: 0;
   border-radius: 0;
 }
